--- a/telegram-react/src/components/SidebarChat.css
+++ b/telegram-react/src/components/SidebarChat.css
@@ -1,5 +1,6 @@
 .sidebarThread {
   display: flex;
+  flex:1;
   align-items: center;
   padding: 20px;
   border-bottom: 1px solid rgba(190, 190, 190, 0.1);
